centers all text and fixes header spacing

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -4,7 +4,6 @@
 }
 
 .header__title {
-  text-align: center;
   vertical-align: middle;
   margin-bottom: 0;
   margin: .3em .3em;
